Component card feito

--- a/src/pages/style/global.css
+++ b/src/pages/style/global.css
@@ -1,7 +1,48 @@
-.bg-default-color{
+p{
+    all: unset;
+}
+
+.bg-default{
     background-color: #393939;
+}
+
+.bg-estudos{
+    background-color: #46AAD9;
+    
+}
+
+.border-estudos{
+    border: 2px solid #46AAD9;
+}
+
+.bg-trabalho{
+    background-color: #55D946;
+}
+
+.border-trabalho{
+    border: 2px solid #55D946;
+}
+
+.bg-dia-a-dia{
+    background-color: #DCDF48;
+}
+
+.border-dia-a-dia{
+    border: 2px solid #DCDF48;
+}
+
+.bg-outros{
+    background-color: #D946AD;
+}
+
+.border-outros{
+    border: 2px solid #D946AD;
 }
 
 .text-white{
     color: white;
+}
+
+.text-justify{
+    text-align: justify;
 }
