--- a/src/pages/style/global.css
+++ b/src/pages/style/global.css
@@ -46,3 +46,11 @@ p{
 .text-justify{
     text-align: justify;
 }
+
+.h-100vh{
+    height: 100vh;
+}
+
+.shadow-sections{
+    box-shadow: -4px 4px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
